--- a/index.html
+++ b/index.html
@@ -2,17 +2,18 @@
 <html lang="vi">
 <head>
     <meta charset="UTF-8" />
-    <title>Yakult Script Hub – Game Mod & Script Library</title>
+    <title>Game Scripts</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="icon" type="image/png" href="assets/img/logo.png">
 </head>
 
 <body>
 
     <!-- HEADER -->
-    <header class="header">
-        <div class="logo">
-            <span class="logo-dot"></span>
+<header class="header">
+    <div class="logo">
+        <img src="assets/img/logo.png" class="logo-img">
             <h1 class="logo-text">Scipt Made By xGh0stZ</h1>
         </div>
         <nav class="nav">
@@ -63,3 +64,4 @@
 
 </body>
 </html>
+
