--- a/index.html
+++ b/index.html
@@ -2,43 +2,251 @@
 <html lang="vi">
 <head>
     <meta charset="UTF-8">
-    <title>GameMOD24H – Script & Mod VIP</title>
-    <link rel="stylesheet" href="assets/css/style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Yakult Ipramovic Scripts</title>
+
+    <style>
+        body {
+            background: #060b10;
+            font-family: Arial, sans-serif;
+            color: #fff;
+            margin: 0;
+        }
+
+        /* Hero Section */
+        .hero-section {
+            width: 100%;
+            padding: 50px 0;
+            text-align: center;
+        }
+
+        .hero-avatar {
+            width: 300px;
+            border-radius: 20px;
+            box-shadow: 0 0 20px #ff0044aa;
+            animation: floatAnime 3s ease-in-out infinite;
+        }
+
+        .hero-title {
+            font-size: 45px;
+            font-weight: 700;
+            margin-top: 15px;
+            color: #00f7ff;
+            text-shadow: 0 0 10px #00f7ff, 0 0 20px #0099aa;
+            animation: slideIn 1s ease forwards;
+        }
+
+        .hero-subtitle {
+            font-size: 20px;
+            opacity: 0.9;
+            margin-top: 5px;
+            color: #ffffffb7;
+            animation: fadeIn 1.4s ease forwards;
+        }
+
+        .btn-hero {
+            display: inline-block;
+            margin-top: 25px;
+            padding: 14px 28px;
+            background: linear-gradient(90deg, #00eaff, #0077ff);
+            color: black;
+            font-weight: 700;
+            border-radius: 10px;
+            text-decoration: none;
+            box-shadow: 0 0 18px #00c8ff;
+            animation: popAnime 0.9s ease forwards;
+            transition: 0.25s ease;
+        }
+
+        .btn-hero:hover {
+            transform: scale(1.1);
+            box-shadow: 0 0 25px #00e5ff, 0 0 40px #0080ff;
+        }
+
+        /* Anime Effects */
+        @keyframes fadeIn {
+            from { opacity: 0; transform: translateY(20px); }
+            to   { opacity: 1; transform: translateY(0); }
+        }
+
+        @keyframes slideIn {
+            from { opacity: 0; transform: translateX(-40px); }
+            to   { opacity: 1; transform: translateX(0); }
+        }
+
+        @keyframes floatAnime {
+            0%   { transform: translateY(0); }
+            50%  { transform: translateY(-12px); }
+            100% { transform: translateY(0); }
+        }
+
+        @keyframes popAnime {
+            0%   { transform: scale(0.6); opacity: 0; }
+            100% { transform: scale(1); opacity: 1; }
+        }
+
+        /* Game Card Grid */
+        #games {
+            width: 90%;
+            margin: auto;
+            margin-top: 40px;
+        }
+
+        .game-grid {
+            display: grid;
+            grid-template-columns: repeat(5, 1fr);
+            gap: 25px;
+        }
+
+        .game-card {
+            background: #0b1118;
+            border-radius: 12px;
+            padding: 12px;
+            box-shadow: 0 0 12px #000;
+            text-align: center;
+            transition: 0.25s ease;
+        }
+
+        .game-card:hover {
+            transform: translateY(-6px);
+            box-shadow: 0 0 20px #00b3ff88;
+        }
+
+        .game-img {
+            width: 100%;
+            border-radius: 10px;
+        }
+
+        .game-name {
+            margin-top: 10px;
+            font-weight: bold;
+            font-size: 17px;
+        }
+
+        .btn-details {
+            margin-top: 10px;
+            padding: 8px 12px;
+            width: 100%;
+            background: #101820;
+            border-radius: 8px;
+            border: 1px solid #00eaff;
+            color: #00eaff;
+            cursor: pointer;
+            transition: 0.25s ease;
+        }
+
+        .btn-details:hover {
+            background: #00eaff;
+            color: black;
+            font-weight: bold;
+        }
+
+        /* Details Box */
+        .details-box {
+            background: #091017;
+            padding: 15px;
+            border-radius: 10px;
+            margin-top: 10px;
+            display: none;
+            text-align: left;
+            font-size: 14px;
+        }
+
+        .price-box {
+            margin-top: 10px;
+            padding: 10px;
+            border-radius: 8px;
+            background: #08131c;
+            color: #00f7ff;
+            font-weight: bold;
+        }
+
+        .btn-buy {
+            width: 100%;
+            padding: 10px;
+            background: #00eaff;
+            border-radius: 8px;
+            color: black;
+            font-weight: bold;
+            margin-top: 10px;
+            cursor: pointer;
+            text-align: center;
+            text-decoration: none;
+        }
+
+        .btn-update {
+            width: 100%;
+            padding: 10px;
+            background: #ff0044;
+            border-radius: 8px;
+            color: white;
+            font-weight: bold;
+            margin-top: 10px;
+            cursor: pointer;
+            text-align: center;
+            text-decoration: none;
+        }
+    </style>
 </head>
 
 <body>
 
-<h1 class="title">Danh sách game</h1>
+    <!-- 🟦 HERO ANIME HEADER -->
+    <header class="hero-section">
+        <div class="hero-content">
+            <img src="assets/img/banner.png" class="hero-avatar" alt="Yakult Ipramovic">
 
-<input type="text" id="searchInput" placeholder="Tìm theo tên game..." onkeyup="searchGame()" />
+            <h1 class="hero-title">YAKULT IPRAMOVIC ✦</h1>
 
-<div id="gameList" class="game-grid"></div>
+            <p class="hero-subtitle">Script & Mod Game VIP • Made by xGh0stZ</p>
 
-<!-- POPUP DETAIL -->
-<div id="gameDetail" class="detail-popup">
-    <div class="detail-content">
-        <button onclick="closeDetail()" class="close-btn">✖</button>
-
-        <img id="dImage" class="detail-img">
-        <h2 id="dName"></h2>
-        <p id="dDescription" class="detail-desc"></p>
-
-        <h3>Features</h3>
-        <ul id="dFeatures" class="feature-list"></ul>
-
-        <h3>Pricing</h3>
-        <div class="price-box">
-            <p><b>Monthly:</b> <span id="dMonthly"></span></p>
-            <p><b>Lifetime:</b> <span id="dLifetime"></span></p>
+            <a href="#games" class="btn-hero">Xem danh sách game</a>
         </div>
+    </header>
 
-        <a id="buyBtn" class="buy-btn" target="_blank">Buy Now</a>
-        <button id="requestUpdate" class="update-btn">Request Update</button>
-    </div>
-</div>
+    <!-- 🟩 GAME LIST -->
+    <section id="games">
+        <h2>Danh sách game</h2>
+        <div class="game-grid" id="gameList"></div>
+    </section>
 
-<script src="assets/data/games.js"></script>
-<script src="assets/js/app.js"></script>
+    <!-- Load game data -->
+    <script src="assets/data/games.js"></script>
+
+    <!-- Render Game UI -->
+    <script>
+        const gameList = document.getElementById("gameList");
+
+        gamesData.forEach(game => {
+            const el = document.createElement("div");
+            el.className = "game-card";
+
+            el.innerHTML = `
+                <img src="${game.image}" class="game-img">
+                <div class="game-name">${game.name}</div>
+                <button class="btn-details">Show Details</button>
+
+                <div class="details-box">
+                    <b>Mô tả:</b> ${game.description}<br><br>
+                    <b>Features:</b>
+                    <ul>${game.features.map(f => `<li>✔ ${f}</li>`).join("")}</ul>
+
+                    <div class="price-box">💳 Giá tháng: <b>${game.monthly}K</b></div>
+                    <div class="price-box">💎 Vĩnh viễn: <b>${game.lifetime}K</b></div>
+
+                    <a href="https://t.me/YakultIpramovic" class="btn-buy">Mua ngay</a>
+                    <a href="https://t.me/YakultIpramovic" class="btn-update">Yêu cầu cập nhật</a>
+                </div>
+            `;
+
+            el.querySelector(".btn-details").addEventListener("click", () => {
+                const box = el.querySelector(".details-box");
+                box.style.display = box.style.display === "block" ? "none" : "block";
+            });
+
+            gameList.appendChild(el);
+        });
+    </script>
 
 </body>
 </html>
