--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
     <!-- 🟦 HERO ANIME HEADER -->
     <header class="hero-section">
         <div class="hero-content">
-            <img src="assets/img/banner.png" class="hero-avatar" alt="Yakult Ipramovic">
+            <img src="assets/img/logo.png" class="hero-avatar" alt="Yakult Ipramovic">
 
             <h1 class="hero-title">YAKULT IPRAMOVIC ✦</h1>
 
@@ -250,3 +250,4 @@
 
 </body>
 </html>
+
