--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Yakult Ipramovic Scripts</title>
+    <title>Game Mod 24H</title>
+<!-- Favicon -->
+<link rel="icon" type="image/png" href="assets/img/logo.png">
+<link rel="shortcut icon" href="assets/img/logo.png" type="image/png">
 
     <!-- Load CSS -->
     <link rel="stylesheet" href="assets/css/style.css">
@@ -69,3 +72,4 @@
 
 </body>
 </html>
+
