--- a/index.html
+++ b/index.html
@@ -4,115 +4,55 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Game Mod 24H</title>
+    <title>Game Mod 24H - Yakult Ipramovic</title>
 
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="assets/img/logo.png">
-    <link rel="shortcut icon" href="assets/img/logo.png" type="image/png">
+    <link rel="shortcut icon" href="assets/img/logo.png">
 
     <!-- CSS -->
     <link rel="stylesheet" href="assets/css/style.css">
+
+    <!-- Particles.js -->
+    <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+
 </head>
 
 <body>
 
-    <!-- 🟦 HERO SECTION -->
-    <header class="hero-section">
+    <!-- PARTICLES BACKGROUND -->
+    <div id="particles-js"></div>
 
-        <img src="assets/img/logo.png" class="hero-avatar" alt="Yakult Ipramovic">
+    <!-- HERO -->
+    <header class="hero-section">
+        <img src="assets/img/logo.png" class="hero-avatar">
 
         <h1 class="hero-title">YAKULT IPRAMOVIC ✦</h1>
 
         <p class="hero-subtitle">Script & Mod Game VIP • Made by xGh0stZ</p>
 
-        <p class="hero-stats">
-            🔥 Hiện có <span id="totalScripts">0</span> script VIP đang cập nhật mỗi ngày!
-        </p>
+        <p class="hero-stats">🔥 Hiện có <span id="totalScripts">0</span> script VIP!</p>
 
-        <a href="https://t.me/YakultIpramovic" class="btn-hero btn-tele">
-            📢 Tham gia Telegram Channel
-        </a>
-
-        <a href="#games" class="btn-hero">
-            Xem danh sách game
-        </a>
-
+        <a href="https://t.me/YakultIpramovic" class="btn-hero btn-tele">📢 Tham gia Telegram</a>
+        <a href="#games" class="btn-hero">Xem danh sách game</a>
     </header>
 
-    <!-- 🟩 GAME LIST SECTION -->
+    <!-- GAME LIST -->
     <section id="games">
-        <h2 style="text-align:center; color:#00eaff; text-shadow:0 0 10px #00eaff;">Danh sách game</h2>
+        <h2 class="section-title">Danh sách game</h2>
 
         <div class="game-grid" id="gameList"></div>
     </section>
 
-    <!-- Load game data -->
+    <!-- DATA -->
     <script src="assets/data/games.js"></script>
 
-    <!-- Render Game UI -->
+    <!-- MAIN UI SCRIPT -->
+    <script src="assets/js/app.js"></script>
+
     <script>
-        const gameList = document.getElementById("gameList");
-        const totalScripts = document.getElementById("totalScripts");
-
-        // Gán số lượng script
-        totalScripts.innerText = gamesData.length;
-
-        // Render từng game
-        gamesData.forEach(game => {
-            const el = document.createElement("div");
-            el.className = "game-card";
-
-            el.innerHTML = `
-                <img src="${game.image}" class="game-img">
-
-                <div class="game-name">${game.name}</div>
-
-                <button class="btn-details">Show Details</button>
-
-                <div class="details-box">
-                    <b>Mô tả:</b> ${game.description}<br><br>
-
-                    <b>Features:</b>
-                    <ul>${game.features.map(f => `<li>✔ ${f}</li>`).join("")}</ul>
-
-                    <div class="price-box">
-                        💳 Giá tháng: <b>${game.monthly}K</b>
-                    </div>
-
-                    <div class="price-box">
-                        💎 Vĩnh viễn: <b>${game.lifetime}K</b>
-                    </div>
-
-                    <a class="btn-buy" href="https://t.me/YakultIpramovic">Mua ngay</a>
-                    <a class="btn-update" href="https://t.me/YakultIpramovic">Yêu cầu cập nhật</a>
-                </div>
-            `;
-
-            // Toggle details
-            el.querySelector(".btn-details").onclick = () => {
-                const box = el.querySelector(".details-box");
-                box.style.display = box.style.display === "block" ? "none" : "block";
-            };
-
-            gameList.appendChild(el);
-        });
+        particlesJS.load("particles-js", "assets/js/particles.json");
     </script>
 
 </body>
 </html>
-
-<script>
-    // COUNTER ANIMATION
-    let total = gamesData.length;
-    let counter = 0;
-    const speed = 30;
-
-    function animateCounter() {
-        if (counter < total) {
-            counter++;
-            document.getElementById("totalScripts").innerText = counter;
-            setTimeout(animateCounter, speed);
-        }
-    }
-    animateCounter();
-</script>
