--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Game Mod 24H - Yakult Ipramovic</title>
+    <title>Game Mod 24H</title>
 
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="assets/img/logo.png">
@@ -119,3 +119,11 @@
 
 </body>
 </html>
+
+<section id="games">
+    <h2 class="section-title">Danh sách game</h2>
+    <div class="game-grid" id="gameList"></div>
+
+    <!-- PAGINATION -->
+    <div id="pagination"></div>
+</section>
