--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <div id="particles-js"></div>
 
     <!-- HERO -->
-    <header class="hero-section">
+<header class="hero-section compact">
         <img src="assets/img/logo.png" class="hero-avatar">
 
         <h1 class="hero-title">YAKULT IPRAMOVIC ✦</h1>
@@ -125,5 +125,6 @@
     <div class="game-grid" id="gameList"></div>
 
     <!-- PAGINATION -->
-    <div id="pagination"></div>
+    <div id="pagination" class="pagination"></div>
 </section>
+
