--- a/index.html
+++ b/index.html
@@ -56,9 +56,25 @@
 
         <div class="game-grid" id="gameList"></div>
 
-        <!-- PAGINATION -->
-        <div id="pagination" class="pagination"></div>
-    </section>
+<!-- PAGINATION -->
+<div id="pagination" class="pagination"></div>
+
+<!-- PRICE TABLE -->
+<div class="price-grid">
+    <div class="price-item">
+        <h3>🔥 Giá một game</h3>
+        <p>250K</p>
+    </div>
+    <div class="price-item">
+        <h3>⚡ Gói toàn bộ game (1 tháng)</h3>
+        <p>300K</p>
+    </div>
+    <div class="price-item">
+        <h3>💎 Gói trọn đời ALL GAME</h3>
+        <p>700K</p>
+    </div>
+</div>
+
 
     <!-- DATA -->
     <script src="assets/data/games.js"></script>
@@ -72,3 +88,4 @@
 
 </body>
 </html>
+
