--- a/index.html
+++ b/index.html
@@ -60,32 +60,51 @@
 <div id="pagination" class="pagination"></div>
 
 <!-- PRICE TABLE -->
-<div class="price-grid">
-    <div class="price-item">
-        <h3>🔥 Giá một game</h3>
-        <p>250K</p>
-    </div>
-    <div class="price-item">
-        <h3>⚡ Gói toàn bộ game (1 tháng)</h3>
-        <p>300K</p>
-    </div>
-    <div class="price-item">
-        <h3>💎 Gói trọn đời ALL GAME</h3>
-        <p>700K</p>
+<div class="price-plans">
+    <h2 class="price-title">Membership Plans</h2>
+
+    <div class="price-grid-4">
+        
+        <div class="price-card">
+            <h3>1 Game / Month</h3>
+            <div class="price-value">250K</div>
+            <ul>
+                <li>✔ Nhận 1 game bất kỳ</li>
+                <li>✔ Hỗ trợ đầy đủ</li>
+                <li class="disable">✖ Full VIP Scripts</li>
+            </ul>
+        </div>
+
+        <div class="price-card popular">
+            <div class="tag-popular">Phổ biến</div>
+            <h3>All Games / Month</h3>
+            <div class="price-value">300K</div>
+            <ul>
+                <li>✔ Dùng toàn bộ scripts</li>
+                <li>✔ Update liên tục</li>
+                <li class="disable">✖ Lifetime</li>
+            </ul>
+        </div>
+
+        <div class="price-card">
+            <h3>1 Game Lifetime</h3>
+            <div class="price-value">500K</div>
+            <ul>
+                <li>✔ Sở hữu 1 game trọn đời</li>
+                <li>✔ Update trọn đời</li>
+                <li class="disable">✖ Toàn bộ game</li>
+            </ul>
+        </div>
+
+        <div class="price-card">
+            <h3>All Games Lifetime</h3>
+            <div class="price-value">$150</div>
+            <ul>
+                <li>✔ Full VIP Scripts trọn đời</li>
+                <li>✔ Support 24/7</li>
+                <li>✔ Ưu tiên update</li>
+            </ul>
+        </div>
+
     </div>
 </div>
-
-
-    <!-- DATA -->
-    <script src="assets/data/games.js"></script>
-
-    <!-- MAIN UI -->
-    <script src="assets/js/app.js"></script>
-
-    <script>
-        particlesJS.load("particles-js", "assets/js/particles.json");
-    </script>
-
-</body>
-</html>
-
