--- a/index.html
+++ b/index.html
@@ -108,3 +108,15 @@
 
     </div>
 </div>
+    <!-- DATA -->
+    <script src="assets/data/games.js"></script>
+
+    <!-- MAIN UI -->
+    <script src="assets/js/app.js"></script>
+
+    <script>
+        particlesJS.load("particles-js", "assets/js/particles.json");
+    </script>
+
+</body>
+</html>
